[package]
name = "ns"
version = "0.5.0"
edition = "2021"

[dependencies]
rayon = { version = "1.10", optional = true }
cranelift = "0.127.1"
cranelift-codegen = "0.127.1"
cranelift-frontend = "0.127.1"
cranelift-jit = "0.127.1"
cranelift-module = "0.127.1"

[features]
default = []
parallel = ["rayon"]
